fix content width for eliminate horizontal scroll

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -7737,7 +7737,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 89%;
+        width: 85%;
     }
 
     .button-toggle-expanded {
@@ -7760,7 +7760,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 88%;
+        width: 85%;
     }
 
     .button-toggle-expanded {
@@ -7784,7 +7784,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 87%;
+        width: 80%;
     }
 
     .button-toggle-expanded {
@@ -7901,7 +7901,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     #content {
-        width: 90%;
+        width: 99%;
         margin-left: 1%;
     }
 }
@@ -7916,7 +7916,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 86%;
+        width: 82%;
     }
 
     .button-toggle-expanded {
@@ -7943,7 +7943,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 85%;
+        width: 82%;
     }
 
     .button-toggle-expanded {
@@ -7955,7 +7955,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     #content {
-        width: 95%;
+        width: 99%;
         margin-left: 1%;
     }
 }
@@ -7970,7 +7970,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 84%;
+        width: 80%;
     }
 
     .button-toggle-expanded {
@@ -7997,7 +7997,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 83%;
+        width: 80%;
     }
 
     .button-toggle-expanded {
@@ -8026,7 +8026,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-md-10 {
-        width: 82%;
+        width: 74%;
     }
 
     .button-toggle-expanded {
@@ -8041,6 +8041,9 @@ div.list-view-rounded-corners > table th:last-of-type {
         width: 70%;
     }
 
+    #content {
+        width: 97%;
+    }
 }
 
 @media (max-width: 1000px) {
@@ -8894,7 +8897,7 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     .col-sm-9 {
-        width: 88%;
+        width: 75%;
     }
 
     #wizform #wizard {
